fix nav buttons on mobile

--- a/css/JABR_site_styles.css
+++ b/css/JABR_site_styles.css
@@ -345,6 +345,7 @@ ul {
 
 @media (max-width: 48em) {
   .pure-menu-list {
+    font-size: .8em;
     width: calc(100% - 80px);
     border-top: 1px solid grey; }
 
